// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - File Upload  Default renders correctly 1`] = `
<test>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label"
      for="example-file-upload-default"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <label
      class="ecl-file-upload__button-container"
      for="example-file-upload-default"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
      >
        Choose file
      </span>
    </label>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      id="example-file-upload-default"
      name="file-upload-name"
      required=""
      type="file"
    />
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</test>
`;

exports[`EC - File Upload  Default renders correctly when disabled 1`] = `
<test>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
      for="example-file-upload-default"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <label
      class="ecl-file-upload__button-container"
      for="example-file-upload-default"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
        disabled=""
      >
        Choose file
      </span>
    </label>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      disabled=""
      id="example-file-upload-default"
      name="file-upload-name"
      required=""
      type="file"
    />
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</test>
`;

exports[`EC - File Upload  Default renders correctly when invalid 1`] = `
<test>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
      for="example-file-upload-default"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <div
      class="ecl-feedback-message"
    >
      Invalid text
    </div>
    <label
      class="ecl-file-upload__button-container"
      for="example-file-upload-default"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
      >
        Choose file
      </span>
    </label>
    <input
      class="ecl-file-upload ecl-file-upload--invalid"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      id="example-file-upload-default"
      name="file-upload-name"
      required=""
      type="file"
    />
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</test>
`;

exports[`EC - File Upload  Default renders correctly when required 1`] = `
<test>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label"
      for="example-file-upload-default"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <label
      class="ecl-file-upload__button-container"
      for="example-file-upload-default"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
      >
        Choose file
      </span>
    </label>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      id="example-file-upload-default"
      name="file-upload-name"
      required=""
      type="file"
    />
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</test>
`;

exports[`EC - File Upload  Default renders correctly with extra attributes 1`] = `
<test>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label"
      for="example-file-upload-default"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <label
      class="ecl-file-upload__button-container"
      for="example-file-upload-default"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
      >
        Choose file
      </span>
    </label>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      data-test="data-test-value"
      data-test-1="data-test-value-1"
      id="example-file-upload-default"
      name="file-upload-name"
      required=""
      type="file"
    />
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</test>
`;

exports[`EC - File Upload  Default renders correctly with extra class names 1`] = `
<test>
  <div
    class="ecl-form-group custom-class custom-class--test"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label"
      for="example-file-upload-default"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <label
      class="ecl-file-upload__button-container"
      for="example-file-upload-default"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-choose="Choose file"
        data-ecl-file-upload-label-replace="Replace file"
      >
        Choose file
      </span>
    </label>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      id="example-file-upload-default"
      name="file-upload-name"
      required=""
      type="file"
    />
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
</test>
`;

exports[`EC - File Upload  Default with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <div
    class="ecl-form-group"
    data-ecl-file-upload-group=""
  >
    <label
      class="ecl-form-label"
      for="example-file-upload-default"
    >
      Label
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
    >
      This is the input's helper text.
      <div
        class="ecl-u-mt-xs ecl-u-type-color-grey-75"
      >
        Only 
        <strong>
          txt doc docx pdf odt rtf
        </strong>
         files. Maximum size is 
        <strong>
          5 MB
        </strong>
        .
        <br />
        Encrypted documents and those containing macros are not accepted.
      </div>
    </div>
    <label
      class="ecl-file-upload__button-container"
      for="example-file-upload-default"
    >
      <span
        class="ecl-file-upload__button ecl-button ecl-button--primary"
        data-ecl-file-upload-button=""
        data-ecl-file-upload-label-replace="Replace file"
      />
    </label>
    <input
      class="ecl-file-upload"
      data-ecl-auto-init="FileUpload"
      data-ecl-file-upload-input=""
      id="example-file-upload-default"
      name="file-upload-name"
      required=""
      type="file"
    />
    <ul
      class="ecl-file-upload__list"
      data-ecl-file-upload-list=""
    />
  </div>
  <!-- ecl2-compliance: form-group -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
    >
      [form-group] - ecl compliant
    </p>
  </div>
  <!-- ecl2-compliance: file-upload -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [file-upload] -  {{ button_choose_label }} needs to be set and filled in.
    </p>
  </div>
</test>
`;
